fix for answer key meaning misalignment when 3 sentences present

--- a/css/refactor/psychology.less
+++ b/css/refactor/psychology.less
@@ -603,6 +603,10 @@ div.cnx-eoc > .title {
   dd {
     margin-left: 0px;
   }
+  dt {
+    // prevent container from allowing meaning to wrap appropriately
+    height: 15px;
+  }
 }
 
 div.book div.chapter div.titlepage > div > div > h2.title {
